methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:4: error: not found: value nvPas
    avance(nvPas)
           ^