methods.args.MethodsArgs.scala.code
def move(nbPas: Int,versLAvant: Boolean) {
  if (versLAvant){
    avance(nvPas)
  } 
  else {
    recule(nbPas)
  }
}
